@@ -31,6 +31,28 @@
       "develop" : {
          "requires" : {
             "Perl::Critic" : "1.130",
+            "Perl::Critic::Policy::Freenode::AmpersandSubCalls" : "0.024",
+            "Perl::Critic::Policy::Freenode::ArrayAssignAref" : "0.024",
+            "Perl::Critic::Policy::Freenode::BarewordFilehandles" : "0.024",
+            "Perl::Critic::Policy::Freenode::ConditionalDeclarations" : "0.024",
+            "Perl::Critic::Policy::Freenode::ConditionalImplicitReturn" : "0.024",
+            "Perl::Critic::Policy::Freenode::DeprecatedFeatures" : "0.024",
+            "Perl::Critic::Policy::Freenode::DiscouragedModules" : "0.024",
+            "Perl::Critic::Policy::Freenode::DollarAB" : "0.024",
+            "Perl::Critic::Policy::Freenode::Each" : "0.024",
+            "Perl::Critic::Policy::Freenode::EmptyReturn" : "0.024",
+            "Perl::Critic::Policy::Freenode::IndirectObjectNotation" : "0.024",
+            "Perl::Critic::Policy::Freenode::ModPerl" : "0.024",
+            "Perl::Critic::Policy::Freenode::OpenArgs" : "0.024",
+            "Perl::Critic::Policy::Freenode::OverloadOptions" : "0.024",
+            "Perl::Critic::Policy::Freenode::POSIXImports" : "0.024",
+            "Perl::Critic::Policy::Freenode::PackageMatchesFilename" : "0.024",
+            "Perl::Critic::Policy::Freenode::Prototypes" : "0.024",
+            "Perl::Critic::Policy::Freenode::StrictWarnings" : "0.024",
+            "Perl::Critic::Policy::Freenode::Threads" : "0.024",
+            "Perl::Critic::Policy::Freenode::Wantarray" : "0.024",
+            "Perl::Critic::Policy::Freenode::WarningsSwitch" : "0.024",
+            "Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment" : "0.024",
             "Perl::Critic::Policy::Moose::ProhibitDESTROYMethod" : "1.05",
             "Perl::Critic::Policy::Moose::ProhibitLazyBuild" : "1.05",
             "Perl::Critic::Policy::Moose::ProhibitMultipleWiths" : "1.05",
@@ -122,7 +144,7 @@
             "Dist::Zilla::Role::PluginBundle::Easy" : "0",
             "Dist::Zilla::Role::TextTemplate" : "0",
             "File::Spec" : "0",
-            "List::MoreUtils" : "0",
+            "List::SomeUtils" : "0",
             "Moose" : "0.99",
             "Path::Tiny" : "0",
             "namespace::autoclean" : "0.09",
@@ -231,10 +253,32 @@
          "Dist::Zilla::Role::TextTemplate" : "6.010",
          "ExtUtils::MakeMaker" : "7.30",
          "File::Spec" : "3.63",
-         "List::MoreUtils" : "0.425",
+         "List::SomeUtils" : "0.56",
          "Moose" : "2.2006",
          "Path::Tiny" : "0.104",
          "Perl::Critic" : "1.130",
+         "Perl::Critic::Policy::Freenode::AmpersandSubCalls" : "0.024",
+         "Perl::Critic::Policy::Freenode::ArrayAssignAref" : "0.024",
+         "Perl::Critic::Policy::Freenode::BarewordFilehandles" : "0.024",
+         "Perl::Critic::Policy::Freenode::ConditionalDeclarations" : "0.024",
+         "Perl::Critic::Policy::Freenode::ConditionalImplicitReturn" : "0.024",
+         "Perl::Critic::Policy::Freenode::DeprecatedFeatures" : "0.024",
+         "Perl::Critic::Policy::Freenode::DiscouragedModules" : "0.024",
+         "Perl::Critic::Policy::Freenode::DollarAB" : "0.024",
+         "Perl::Critic::Policy::Freenode::Each" : "0.024",
+         "Perl::Critic::Policy::Freenode::EmptyReturn" : "0.024",
+         "Perl::Critic::Policy::Freenode::IndirectObjectNotation" : "0.024",
+         "Perl::Critic::Policy::Freenode::ModPerl" : "0.024",
+         "Perl::Critic::Policy::Freenode::OpenArgs" : "0.024",
+         "Perl::Critic::Policy::Freenode::OverloadOptions" : "0.024",
+         "Perl::Critic::Policy::Freenode::POSIXImports" : "0.024",
+         "Perl::Critic::Policy::Freenode::PackageMatchesFilename" : "0.024",
+         "Perl::Critic::Policy::Freenode::Prototypes" : "0.024",
+         "Perl::Critic::Policy::Freenode::StrictWarnings" : "0.024",
+         "Perl::Critic::Policy::Freenode::Threads" : "0.024",
+         "Perl::Critic::Policy::Freenode::Wantarray" : "0.024",
+         "Perl::Critic::Policy::Freenode::WarningsSwitch" : "0.024",
+         "Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment" : "0.024",
          "Perl::Critic::Policy::Moose::ProhibitDESTROYMethod" : "1.05",
          "Perl::Critic::Policy::Moose::ProhibitLazyBuild" : "1.05",
          "Perl::Critic::Policy::Moose::ProhibitMultipleWiths" : "1.05",
