@@ -79,7 +79,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Role::PluginBundle::Easy" => 0,
     "Dist::Zilla::Role::TextTemplate" => 0,
     "File::Spec" => 0,
-    "List::MoreUtils" => 0,
+    "List::SomeUtils" => 0,
     "Moose" => "0.99",
     "Path::Tiny" => 0,
     "namespace::autoclean" => "0.09",
@@ -160,7 +160,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Role::PluginBundle::Easy" => 0,
   "Dist::Zilla::Role::TextTemplate" => 0,
   "File::Spec" => 0,
-  "List::MoreUtils" => 0,
+  "List::SomeUtils" => 0,
   "Moose" => "0.99",
   "Path::Tiny" => 0,
   "Test::More" => 0,
