@@ -60,7 +60,7 @@ requires "Dist::Zilla::Role::PluginBundle::Config::Slicer" => "0";
 requires "Dist::Zilla::Role::PluginBundle::Easy" => "0";
 requires "Dist::Zilla::Role::TextTemplate" => "0";
 requires "File::Spec" => "0";
-requires "List::MoreUtils" => "0";
+requires "List::SomeUtils" => "0";
 requires "Moose" => "0.99";
 requires "Path::Tiny" => "0";
 requires "namespace::autoclean" => "0.09";
@@ -81,6 +81,28 @@ on 'configure' => sub {
 
 on 'develop' => sub {
   requires "Perl::Critic" => "1.130";
+  requires "Perl::Critic::Policy::Freenode::AmpersandSubCalls" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::ArrayAssignAref" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::BarewordFilehandles" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::ConditionalDeclarations" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::ConditionalImplicitReturn" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::DeprecatedFeatures" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::DiscouragedModules" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::DollarAB" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::Each" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::EmptyReturn" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::IndirectObjectNotation" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::ModPerl" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::OpenArgs" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::OverloadOptions" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::POSIXImports" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::PackageMatchesFilename" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::Prototypes" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::StrictWarnings" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::Threads" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::Wantarray" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::WarningsSwitch" => "0.024";
+  requires "Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment" => "0.024";
   requires "Perl::Critic::Policy::Moose::ProhibitDESTROYMethod" => "1.05";
   requires "Perl::Critic::Policy::Moose::ProhibitLazyBuild" => "1.05";
   requires "Perl::Critic::Policy::Moose::ProhibitMultipleWiths" => "1.05";
